--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.2.9",
     "apollo3-cache-persist": "^0.9.1",
     "graphql": "^15.4.0",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
